# tweet-bookmeter-summary

./: .gitignore  README.md  pyproject.toml  upload.sh
src/tweet_bookmeter_summary/: bookmeter_login_page.py  bookmeter_summary_page.py  lambda_function.py
tests/: test_tweet_bookmeter_summary.py
